cmake_minimum_required (VERSION 2.8)
project(LISPQ)
file(GLOB SOURCES "*.c")
include_directories( "../mpc")
include_directories( "../lispq_common")
link_directories( "../mpc")
link_directories(  "../lispq_common")
add_executable(evaluator ${SOURCES})
target_link_libraries(evaluator edit)
target_link_libraries(evaluator mpc)
target_link_libraries(evaluator lispq_common)
