cmake_minimum_required (VERSION 2.8)
project(LISPQ)
file(GLOB SOURCES "*.c")
include_directories( "../mpc")
include_directories( "../lispq_common")
link_directories( "../mpc")
link_directories(  "../lispq_common")
add_executable(polish_parser ${SOURCES})
target_link_libraries(polish_parser edit)
target_link_libraries(polish_parser mpc)
target_link_libraries(polish_parser lispq_common)
